# httpx-file

./: .gitattributes  .gitignore  readme.md  setup.cfg
httpx_file/: __init__.py
tests/: test_transport.py
