[metadata]
name = httpx-file
version = attr: httpx_file.__version__
author = Nuno André
author_email = mail@nunoand.re
description = File transport adapter for httpx.
long_description = file: readme.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/nuno-andre/httpx-file
project_urls =
    Source = https://github.com/nuno-andre/httpx-file
    Bug Tracker = https://github.com/nuno-andre/httpx-file/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Typing :: Typed
platforms = any

[options]
zip_safe = false
python_requires = >= 3.6.1
install_requires =
    httpx >= 0.18

[options.extras_require]
tests =
    pytest

[flake8]
max-line-length = 80
ignore = E241, E402
